examples: update Hello to use latest of everything
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/examples/hello/firefly.toml
+++ b/examples/hello/firefly.toml
@@ -7,3 +7,4 @@ app_name = "Hello Demo"
 floor = { path = "floor.png" }
 wall = { path = "wall.png" }
 player = { path = "player.png" }
+monster = { path = "monster.png" }
