examples: changes to hello example for simplicity
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/examples/hello/firefly.toml
+++ b/examples/hello/firefly.toml
@@ -6,5 +6,4 @@ app_name = "Hello Demo"
 [files]
 floor = { path = "floor.png" }
 wall = { path = "wall.png" }
-player = { path = "player.png" }
-monster = { path = "monster.png" }
+player = { path = "gopher.png" }
