examples: replace hello artwork with foresty look
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/examples/hello/firefly.toml
+++ b/examples/hello/firefly.toml
@@ -4,6 +4,6 @@ author_name = "tinyrogue"
 app_name = "Hello Demo"
 
 [files]
-floor = { path = "floor.png" }
-wall = { path = "wall.png" }
+floor = { path = "forest.png" }
+wall = { path = "tree.png" }
 player = { path = "gopher.png" }
