examples/ghost: start making it into more of a real game
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/examples/ghost/firefly.toml
+++ b/examples/ghost/firefly.toml
@@ -1,10 +1,11 @@
 author_id = "tinyrogue"
 app_id = "tinyrogue-ghost"
 author_name = "tinyrogue"
-app_name = "Ghost"
+app_name = "Ghost Castle"
 
 [files]
 floor = { path = "floor.png" }
 wall = { path = "wall.png" }
 player = { path = "player.png" }
-monster = { path = "monster.png" }
+ghost = { path = "ghost.png" }
+font = { path = "font.fff", url = "https://fonts.fireflyzero.com/fonts/ascii/eg_6x10.fff" }
